--- a/styles/style.css
+++ b/styles/style.css
@@ -282,7 +282,8 @@ body {
 .lots__heading {
   display: flex;
   max-width: 1440px;
-  padding: 0px 1229px 27px 90px;
+  padding-left: 90px;
+  padding-bottom: 27px;
   align-items: center;
   color: #000;
   font-family: Raleway, Arial, Helvetica, sans-serif;
@@ -295,33 +296,36 @@ body {
 
 .lots__card-list {
   display: flex;
-  min-width: 430px;
   min-height: 450px;
   align-items: flex-start;
   gap: 25px;
-  flex: 1 0 0;
   align-self: stretch;
   flex-direction: row;
 }
 
+.card-link {
+  flex: 1 0 0;
+align-self: stretch;
+}
+
 .card_type_film {
-  min-width: 430px;
-  min-height: 450px;
+  max-width: 430px;
+  max-height: 450px;
   flex: 1 0 0;
   align-self: stretch;
-  flex-shrink: 0;
   background: url("../images/card-lot-01.jpg"), lightgray 50%;
+  flex-shrink: 0;
   background-repeat: no-repeat;
-  background-size: 430px 450px;
+  background-size: cover;
   position: relative;
   z-index: 0;
 }
 
 .overlay-card {
-  min-width: 430px;
-  min-height: 450px;
-  background-position: 100% 100%;
+  max-width: 430px;
+  max-height: 450px;
   background-repeat: no-repeat;
+  background-size: 100% 100%;
   position: absolute;
   z-index: -1;
 }
@@ -330,7 +334,7 @@ body {
   display: flex;
   max-width: 430px;
   max-height: 450px;
-  padding: 50px 40px;
+  padding: 50px 38px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
@@ -366,7 +370,7 @@ body {
   flex-shrink: 0;
   background: url("../images/card-lot-02.jpg"), lightgray 50%;
   background-repeat: no-repeat;
-  background-size: 430px 450px;
+  background-size: cover;
   position: relative;
   z-index: 0;
 }
@@ -374,7 +378,7 @@ body {
 .card__text_book {
   display: flex;
   max-width: 430px;
-  padding: 50px 40px;
+  padding: 50px 38px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
@@ -386,10 +390,10 @@ body {
   max-height: 450px;
   flex: 1 0 0;
   align-self: stretch;
-  flex-shrink: 0;
   background: url("../images/card-lot-03.jpg"), lightgray 50%;
+  flex-shrink: 0;
   background-repeat: no-repeat;
-  background-size: 430px 450px;
+  background-size: cover;
   position: relative;
   z-index: 0;
 }
@@ -397,7 +401,7 @@ body {
 .card__text_picture {
   display: flex;
   max-width: 430px;
-  padding: 50px 40px;
+  padding: 50px 38px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
@@ -406,8 +410,10 @@ body {
 
 .lots__look-more {
   display: flex;
-  height: 55px;
-  padding: 30px 1158px 0px 90px;
+  max-height: 55px;
+  padding-top: 30px;
+  padding-left: 90px;
+  margin-right: 1158px;
   align-items: center;
 }
 
