--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,18 @@
 * {
   box-sizing: border-box;
-  margin: auto;
+  margin: 0;
   padding: 0;
 }
 
 body {
   display: flex;
   max-width: 1440px;
+  max-height: 2844px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
   background: #fff;
-  margin: auto;
+  margin: 0;
 }
 
 .header {
