--- a/styles/global.css
+++ b/styles/global.css
@@ -2,15 +2,16 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   min-width: 1100px;
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
   font-family: Raleway, sans-serif;
   display: flex;
-  max-width: 1440px;
-  max-height: 2844px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
