--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,9 @@
 .header {
-  width: 100%;
+  max-width: 1440px;
   display: inline-flex;
-  padding: 0% 3.4%;
+  padding: 92px 50px;
   align-items: center;
-  margin-top: 92px;
-  margin-bottom: 92px;
+  margin: 0;
 }
 
 .header__menu {
@@ -103,7 +102,7 @@
 
 .main {
   display: flex;
-  max-width: 1440px;
+  min-width: 1440px;
   padding-bottom: 0px;
   flex-direction: column;
   align-items: flex-start;
@@ -112,7 +111,7 @@
 }
 
 .cover {
-  max-width: 1440px;
+  min-width: 1440px;
   max-height: 757px;
   background-image: url("../images/cover.jpg");
   background-position: center;
@@ -133,7 +132,7 @@
 
 .cover-container {
   display: flex;
-  max-width: 1440px;
+  min-width: 1440px;
   padding: 165px 0px 49px 0px;
   flex-direction: column;
   justify-content: flex-end;
@@ -266,7 +265,7 @@
 
 .lots__heading {
   display: flex;
-  max-width: 1440px;
+  min-width: 1440px;
   padding-left: 90px;
   padding-bottom: 27px;
   align-items: center;
@@ -281,7 +280,7 @@
 
 .lots__card-list {
   display: flex;
-  max-width: 1440px;
+  min-width: 1440px;
   max-height: 450px;
   padding: 0 50px;
   justify-content: center;
@@ -389,10 +388,10 @@ align-self: stretch;
 
 .lots__look-more {
   display: flex;
+  min-width: 1440px;
   max-height: 55px;
   padding-top: 30px;
   padding-left: 90px;
-  margin-right: 1158px;
   align-items: center;
 }
 
@@ -419,8 +418,8 @@ align-self: stretch;
 
 .about {
   display: flex;
-  max-width: 1440px;
-  max-height: 488px;
+  min-width: 1440px;
+  min-height: 488px;
   padding: 0px 50px;
   justify-content: center;
   align-items: flex-start;
@@ -491,8 +490,7 @@ align-self: stretch;
 }
 
 .footer {
-  max-width: 1440px;
-  display: inline-flex;
+  display: flex;
   padding: 90px 50px;
   align-items: flex-start;
   gap: 356px;
@@ -500,6 +498,7 @@ align-self: stretch;
 }
 
 .footer-address {
+  display: flex;
   max-width: 242px;
   max-height: 99px;
   flex-direction: column;
@@ -514,7 +513,7 @@ align-self: stretch;
 }
 
 .footer-menu {
-  min-width: 154px;
+  max-width: 154px;
   display: flex;
   padding-bottom: 0px;
   flex-direction: column;
