--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@
 
 .header__links-list {
   display: flex;
-  min-width: 392px;
+  width: 392px;
   align-items: flex-start;
   gap: 30px;
   flex-direction: row;
@@ -54,8 +54,8 @@
 }
 
 .header__logo-image {
-  min-width: 148px;
-  max-height: 105px;
+  width: 148px;
+  height: 105px;
   flex-shrink: 0;
 }
 
@@ -73,7 +73,7 @@
 }
 
 .header-address__container {
-  min-width: 240px;
+  width: 240px;
 }
 
 .address__item_line {
@@ -102,7 +102,7 @@
 
 .main {
   display: flex;
-  min-width: 1440px;
+  max-width: 1440px;
   padding-bottom: 0px;
   flex-direction: column;
   align-items: flex-start;
@@ -111,8 +111,8 @@
 }
 
 .cover {
-  min-width: 1440px;
-  max-height: 757px;
+  max-width: 1440px;
+  height: 757px;
   background-image: url("../images/cover.jpg");
   background-position: center;
   background-size: cover;
@@ -132,7 +132,7 @@
 
 .cover-container {
   display: flex;
-  min-width: 1440px;
+  max-width: 1440px;
   padding: 165px 0px 49px 0px;
   flex-direction: column;
   justify-content: flex-end;
@@ -152,7 +152,7 @@
 
 .aligned-text {
   display: flex;
-  max-height: 115px;
+  height: 115px;
   padding: 0px 1074px 0px 50px;
   align-items: center;
   color: #fff;
@@ -166,7 +166,7 @@
 
 .aligned-text_center {
   display: flex;
-  max-height: 100px;
+  height: 100px;
   padding: 0px 565px 0px 506px;
   align-items: center;
   color: #fff;
@@ -181,7 +181,7 @@
 
 .aligned-text_right {
   display: flex;
-  max-height: 100px;
+  height: 100px;
   padding: 0px 50px 0px 973px;
   justify-content: flex-end;
   align-items: center;
@@ -206,7 +206,7 @@
 .cover__description {
   display: flex;
   max-width: 1440px;
-  max-height: 52px;
+  height: 52px;
   padding: 0px 50px 0px 422px;
   justify-content: flex-end;
   align-items: flex-start;
@@ -215,7 +215,7 @@
 
 .cover__description-text {
   display: flex;
-  max-height: 52px;
+  height: 52px;
   padding: 12px 0px;
   justify-content: center;
   align-items: center;
@@ -232,7 +232,7 @@
 
 .bet-button {
   display: flex;
-  max-width: 257px;
+  width: 257px;
   padding: 13px 32px;
   justify-content: center;
   align-items: center;
@@ -243,7 +243,7 @@
 }
 
 .bet-button__title {
-  max-width: 193px;
+  width: 193px;
   flex-shrink: 0;
   color: #fff;
   text-align: center;
@@ -265,7 +265,7 @@
 
 .lots__heading {
   display: flex;
-  min-width: 1440px;
+  max-width: 1440px;
   padding-left: 90px;
   padding-bottom: 27px;
   align-items: center;
@@ -280,8 +280,8 @@
 
 .lots__card-list {
   display: flex;
-  min-width: 1440px;
-  max-height: 450px;
+  max-width: 1440px;
+  height: 450px;
   padding: 0 50px;
   justify-content: center;
   align-items: flex-start;
@@ -291,12 +291,12 @@
 
 .card-link {
   flex: 1 0 0;
-align-self: stretch;
+  align-self: stretch;
 }
 
 .card_type_film {
-  max-width: 430px;
-  max-height: 450px;
+  width: 430px;
+  height: 450px;
   flex-shrink: 0;
   background: url("../images/card-lot-01.jpg"), lightgray 50%;
   background-repeat: no-repeat;
@@ -306,8 +306,8 @@ align-self: stretch;
 }
 
 .overlay-card {
-  max-width: 430px;
-  max-height: 450px;
+  width: 430px;
+  height: 450px;
   background-repeat: no-repeat;
   background-size: 100% 100%;
   position: absolute;
@@ -316,7 +316,7 @@ align-self: stretch;
 
 .card__text_film {
   display: flex;
-  max-width: 430px;
+  width: 430px;
   padding: 50px 38px;
   flex-direction: column;
   justify-content: center;
@@ -345,8 +345,8 @@ align-self: stretch;
 }
 
 .card_type_book {
-  max-width: 430px;
-  max-height: 450px;
+  width: 430px;
+  height: 450px;
   flex-shrink: 0;
   background: url("../images/card-lot-02.jpg"), lightgray 50%;
   background-repeat: no-repeat;
@@ -357,7 +357,7 @@ align-self: stretch;
 
 .card__text_book {
   display: flex;
-  max-width: 430px;
+  width: 430px;
   padding: 50px 40px;
   flex-direction: column;
   justify-content: center;
@@ -366,8 +366,8 @@ align-self: stretch;
 }
 
 .card_type_picture {
-  max-width: 430px;
-  max-height: 450px;
+  width: 430px;
+  height: 450px;
   background: url("../images/card-lot-03.jpg"), lightgray 50%;
   flex-shrink: 0;
   background-repeat: no-repeat;
@@ -378,7 +378,7 @@ align-self: stretch;
 
 .card__text_picture {
   display: flex;
-  max-width: 430px;
+  width: 430px;
   padding: 50px 40px;
   flex-direction: column;
   justify-content: center;
@@ -388,8 +388,8 @@ align-self: stretch;
 
 .lots__look-more {
   display: flex;
-  min-width: 1440px;
-  max-height: 55px;
+  max-width: 1440px;
+  height: 55px;
   padding-top: 30px;
   padding-left: 90px;
   align-items: center;
@@ -397,7 +397,7 @@ align-self: stretch;
 
 .lots-block {
   display: flex;
-  max-width: 192px;
+  width: 192px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
@@ -418,8 +418,8 @@ align-self: stretch;
 
 .about {
   display: flex;
-  min-width: 1440px;
-  min-height: 488px;
+  max-width: 1440px;
+  height: 488px;
   padding: 0px 50px;
   justify-content: center;
   align-items: flex-start;
@@ -430,8 +430,8 @@ align-self: stretch;
 
 .logo-column {
   display: flex;
-  max-width: 430px;
-  max-height: 488px;
+  width: 430px;
+  height: 488px;
   padding: 1px 95px 247px 95px;
   flex-direction: column;
   align-items: center;
@@ -439,16 +439,16 @@ align-self: stretch;
 }
 
 .logo-ellipse {
-  max-width: 240px;
-  max-height: 240px;
+  width: 240px;
+  height: 240px;
   flex-shrink: 0;
   background-color: #000;
   border-radius: 50%;
 }
 
 .logo-image {
-  max-width: 146px;
-  max-height: 113px;
+  width: 146px;
+  height: 113px;
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -457,7 +457,7 @@ align-self: stretch;
 
 .about-column {
   display: flex;
-  max-width: 885px;
+  width: 885px;
   padding-top: 101px;
   flex-direction: column;
   justify-content: flex-end;
@@ -499,8 +499,8 @@ align-self: stretch;
 
 .footer-address {
   display: flex;
-  max-width: 242px;
-  max-height: 99px;
+  width: 242px;
+  height: 99px;
   flex-direction: column;
   align-items: flex-start;
   margin-top: 0;
@@ -513,7 +513,7 @@ align-self: stretch;
 }
 
 .footer-menu {
-  max-width: 154px;
+  width: 154px;
   display: flex;
   padding-bottom: 0px;
   flex-direction: column;
@@ -549,8 +549,8 @@ align-self: stretch;
 
 .footer__social-list {
   display: flex;
-  max-width: 240px;
-  max-height: 109px;
+  width: 240px;
+  height: 109px;
   padding-bottom: 61px;
   justify-content: center;
   align-items: flex-start;
@@ -558,8 +558,8 @@ align-self: stretch;
 }
 
 .footer__social-icon {
-  max-width: 48px;
-  max-height: 48px;
+  width: 48px;
+  height: 48px;
 }
 
 html {
