--- a/styles/style.css
+++ b/styles/style.css
@@ -73,7 +73,7 @@
 }
 
 .header-address__container {
-  width: 242px;
+  width: 240px;
 }
 
 .address__item_line {
@@ -392,6 +392,7 @@
   height: 55px;
   padding-top: 30px;
   padding-left: 90px;
+  padding-right: 1158px;
   align-items: center;
 }
 
@@ -499,15 +500,22 @@
 
 .footer-address {
   display: flex;
-  width: 242px;
+  width: 240px;
   height: 99px;
+  justify-content: flex-start;
   flex-direction: column;
   align-items: flex-start;
   margin-top: 0;
+  color: #000;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.3px;
 }
 
 .footer-address__container {
-  display: inline-flex;
+  width: 240px;
   flex-direction: column;
   align-items: flex-start;
 }
