--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 .header {
-  width: 1440px;
+  max-width: 1440px;
   display: inline-flex;
   padding: 92px 50px;
   align-items: center;
@@ -73,7 +73,7 @@
 }
 
 .header-address__container {
-  width: 240px;
+  width: 242px;
 }
 
 .address__item_line {
@@ -102,7 +102,7 @@
 
 .main {
   display: flex;
-  width: 1440px;
+  max-width: 1440px;
   padding-bottom: 0px;
   flex-direction: column;
   align-items: flex-start;
@@ -111,7 +111,7 @@
 }
 
 .cover {
-  width: 1440px;
+  max-width: 1440px;
   height: 757px;
   background-image: url("../images/cover.jpg");
   background-position: center;
@@ -132,7 +132,7 @@
 
 .cover-container {
   display: flex;
-  width: 1440px;
+  max-width: 1440px;
   padding: 165px 0px 49px 0px;
   flex-direction: column;
   justify-content: flex-end;
@@ -143,7 +143,7 @@
 
 .cover__title {
   display: flex;
-  width: 1440px;
+  max-width: 1440px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
@@ -205,7 +205,7 @@
 
 .cover__description {
   display: flex;
-  width: 1440px;
+  max-width: 1440px;
   height: 52px;
   padding: 0px 50px 0px 422px;
   justify-content: flex-end;
@@ -265,7 +265,7 @@
 
 .lots__heading {
   display: flex;
-  width: 1440px;
+  max-width: 1440px;
   padding-left: 90px;
   padding-bottom: 27px;
   align-items: center;
@@ -280,7 +280,7 @@
 
 .lots__card-list {
   display: flex;
-  width: 1440px;
+  max-width: 1440px;
   height: 450px;
   padding: 0 50px;
   justify-content: center;
@@ -388,7 +388,7 @@
 
 .lots__look-more {
   display: flex;
-  width: 1440px;
+  max-width: 1440px;
   height: 55px;
   padding-top: 30px;
   padding-left: 90px;
@@ -419,7 +419,7 @@
 
 .about {
   display: flex;
-  width: 1440px;
+  max-width: 1440px;
   height: 488px;
   padding: 0px 50px;
   justify-content: center;
@@ -500,7 +500,7 @@
 
 .footer-address {
   display: flex;
-  width: 240px;
+  width: 242px;
   height: 99px;
   justify-content: flex-start;
   flex-direction: column;
@@ -515,7 +515,7 @@
 }
 
 .footer-address__container {
-  width: 240px;
+  width: 242px;
   flex-direction: column;
   align-items: flex-start;
 }
